fix: posicionando links

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                 área de Full Stack, que me apaixona. Espero ter a chance de crescer junto com sua empresa. Vamos
                 conversar?</p>
             <div class="apresentacao__links">
+                <h2>Acesse minhas redes:</h2>
                 <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/taiane-nascimento-santos">LinkedIn</a>
                 <a class="apresentacao__links__botao"  href="https://github.com/Taitwelve">GitHub</a>
+                <a class="apresentacao__links__botao"  href="https://www.instagram.com/ataianenascimento/">Instagram</a>
             </div>
         </section>
         <img src="Imagem.png" alt="Foto de Taiane Nascimento">
