fix: adicionando ícones aos botões

--- a/index.html
+++ b/index.html
@@ -24,12 +24,19 @@
                 conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/taiane-nascimento-santos">LinkedIn</a>
-                <a class="apresentacao__links__botao"  href="https://github.com/Taitwelve">GitHub</a>
-                <a class="apresentacao__links__botao"  href="https://www.instagram.com/ataianenascimento/">Instagram</a>
+                <a class="apresentacao__links__botao" href="https://www.linkedin.com/in/taiane-nascimento-santos">
+                    <img src="./assets/linkedin.png" alt="Ícone do LinkedIn">
+                    LinkedIn
+                </a>
+                <a class="apresentacao__links__botao"  href="https://github.com/Taitwelve">
+                    <img src="./assets/github.png" alt="Ícone do GitHub">
+                    GitHub </a>
+                <a class="apresentacao__links__botao"  href="https://www.instagram.com/ataianenascimento/">
+                    <img src="./assets/instagram.png" alt="Ícone do instagram">
+                    Instagram</a>
             </div>
         </section>
-        <img src="Imagem.png" alt="Foto de Taiane Nascimento">
+        <img src="/assets/Imagem.png" alt="Foto de Taiane Nascimento">
     </main>
 </body>
 
