--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         </section>
         <img src="/assets/Imagem.png" alt="Foto de Taiane Nascimento">
     </main>
+    <footer class="rodape">
+        <p>Desenvolvido por Taiane Nascimento</p>
+    </footer>
 </body>
 
 </html>
