--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio de Taiane Nascimento</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Styles/style.css">
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="cabecalho_menu">
-            <a class="cabecalho_link">Home</a>
-            <a class="cabecalho_link">Sobre mim </a>
+            <a class="cabecalho_link" href="index.html">Home</a>
+            <a class="cabecalho_link" href="about.html">Sobre mim </a>
         </nav>
     </header>
     <main class="apresentacao">
