--- a/about.html
+++ b/about.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
+    <link rel="stylesheet" href="./Styles/style.css">
 </head>
 <body>
-    <h1>Sobre mim...</h1>
+    <header class="cabecalho">
+        <nav class="cabecalho_menu">
+            <a class="cabecalho_link" href="index.html">Home</a>
+            <a class="cabecalho_link" href="about.html">Sobre mim </a>
+        </nav>
+    </header>
+    <main></main>
+    <footer class="rodape">
+        <p>Desenvolvido por Taiane Nascimento</p>
+    </footer>
 </body>
 </html>
