fix: criando conteúdo da página sobre mim

--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
     <link rel="stylesheet" href="./Styles/style.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <nav class="cabecalho_menu">
@@ -13,9 +15,33 @@
             <a class="cabecalho_link" href="about.html">Sobre mim </a>
         </nav>
     </header>
-    <main></main>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Desenvolvedora Full Stack</h1>
+            <p class="apresentacao__conteudo__texto">Atualmente, sou desenvolvedora full stack na Snowlink, atuando no desenvolvimento de soluções escaláveis
+                e integradas com Angular, Node.js e MongoDB. Trabalho diretamente na implementação de interfaces
+                dinâmicas, consumo de APIs e otimização da performance das aplicações.
+
+                Além da experiência prática, possuo diversas certificações que comprovam meu domínio das tecnologias
+                essenciais para o desenvolvimento web moderno:</p>
+            <p class="apresentacao__conteudo__texto">✅ JavaScript para Web – Criação de páginas dinâmicas <br>
+                ✅ Git e GitHub – Controle de versão e colaboração em projetos  <br>
+                ✅ HTML e CSS – Estruturação e estilização responsiva de páginas  <br>
+                ✅ Lógica de Programação com JavaScript – Funções, listas e desafios práticos  <br>
+                ✅ Fundamentos da Programação – Base sólida para desenvolvimento de software  <br>
+
+                Minha trajetória combina uma base técnica robusta com experiência prática no mercado, permitindo-me
+                atuar de ponta a ponta no desenvolvimento de aplicações. Busco sempre aprimorar minhas habilidades e
+                aplicar as melhores práticas para entregar soluções eficientes e inovadoras.  <br>
+
+                📩 Aberta a conexões e oportunidades para agregar valor a projetos e times que busquem excelência em
+                tecnologia!</p>
+        </section>
+        <img src="/assets/Imagem.png" alt="Foto de Taiane Nascimento">
+    </main>
     <footer class="rodape">
         <p>Desenvolvido por Taiane Nascimento</p>
     </footer>
 </body>
+
 </html>
